# hoistwaywatch

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/: README.md
apps/dashboard/: README.md
configs/: README.md  example-site.yaml  example-zones.json  rules.yaml
deploy/: docker-compose.yml  python.Dockerfile
docs/: README.md  architecture.md  deployment.md  event-catalog.md  faq.md  field-setup.md  hardware.md  installation.md  privacy.md  safety.md
docs/adr/: 0001-record-architecture-decisions.md  template.md
examples/events/: motion_in_zone.json
licenses/: README.md
schemas/: hw-alert-packet.v1.schema.json  hw-event.v1.schema.json
scripts/: README.md  setup-jetson.sh  setup-pi.sh
scripts/ci/: ci.sh
services/: README.md
services/alerts/: README.md
services/capture/: README.md
services/rules/: README.md
services/vision/: README.md
src/hoistwaywatch/alerts/: cli.py
src/hoistwaywatch/bus/: nats_bus.py
src/hoistwaywatch/capture/: cli.py
src/hoistwaywatch/contracts/: alerts.py  events.py
src/hoistwaywatch/observability/: __init__.py  logging.py
src/hoistwaywatch/rules/: cli.py  engine.py  state.py
systemd/: hoistwaywatch-alerts.service  hoistwaywatch-capture.service  hoistwaywatch-nats.service  hoistwaywatch-rules.service  hoistwaywatch-vision.service
tests/: test_rules_engine.py
(+3 files in other folders)
